--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ dash-daq==0.1.4
 dash-html-components==0.14.0
 dash-renderer==0.20.0
 dash-table==3.6.0
-dash-auth=1.3.2
+dash-auth==1.3.2
 decorator==4.3.2
 Flask==1.0.2
 Flask-Compress==1.4.0
